@@ -482,7 +482,11 @@ static gboolean bindsock(struct irc_network *s,
 
 	memset(&hints_bind, 0, sizeof(hints_bind));
 	hints_bind.ai_family = res->ai_family;
+
+#ifdef AI_ADDRCONFIG
 	hints_bind.ai_flags = AI_ADDRCONFIG;
+#endif
+
 	hints_bind.ai_socktype = res->ai_socktype;
 	hints_bind.ai_protocol = res->ai_protocol;
 
@@ -557,7 +561,10 @@ static gboolean connect_current_tcp_server(struct irc_network *s)
 	memset(&hints, 0, sizeof(hints));
 	hints.ai_family = PF_UNSPEC;
 	hints.ai_socktype = SOCK_STREAM;
+
+#ifdef AI_ADDRCONFIG
 	hints.ai_flags = AI_ADDRCONFIG;
+#endif
 
 	/* Lookup */
 	error = getaddrinfo(cs->host, cs->port, &hints, &addrinfo);
